Fixed client content container padding discrepancy
Client content was not centered due to default <h3> margin.

This default <h3> margin has since been removed.

--- a/app/client/src/styles/sass/abstracts/_mixins.scss
+++ b/app/client/src/styles/sass/abstracts/_mixins.scss
@@ -72,7 +72,7 @@
     background-color: $color-base-secondary; 
     box-shadow: 0px 0px 10px $color-primary;
     border-radius: $border-radius;
-    padding: 0.5rem 1.5rem;
+    padding: 1rem 1.5rem;
 }
 
 /**
