--- a/app/client/src/styles/sass/components/_client.scss
+++ b/app/client/src/styles/sass/components/_client.scss
@@ -35,15 +35,22 @@
 
 .client-information {
     @include content-container; 
+
+    display: flex; 
+    flex-direction: column; 
+    gap: 1rem;
     
     &-header {
         @include container-flex; 
 
         justify-content: space-between;
+        height: auto;
         width: 100%; 
 
         &__heading {
             @include subheading; 
+
+            margin: 0px; // removing default <h3> margin
         }
     }
 
